--- a/src/app/seaexport/seaexportm/seaexportm-search/seaexportm-search.component.html
+++ b/src/app/seaexport/seaexportm/seaexportm-search/seaexportm-search.component.html
@@ -19,6 +19,24 @@
           <app-input type="text" formControlName="mbl_refno" case="UPPER"> </app-input>
         </div>
       </div>
+      <div class="form-group row">
+        <label class="col-sm-4 form-label form-label-sm" for="">Agent</label>
+        <div class="col-sm-8">
+          <app-input type="text" formControlName="mbl_agent_name" case="UPPER"> </app-input>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-4 form-label form-label-sm" for="">Place Of Receipt</label>
+        <div class="col-sm-8">
+          <app-input type="text" formControlName="mbl_pol_name" case="UPPER"> </app-input>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-4 form-label form-label-sm" for="">Place Of Delivery</label>
+        <div class="col-sm-8">
+          <app-input type="text" formControlName="mbl_pod_name" case="UPPER"> </app-input>
+        </div>
+      </div>
     </div>
 
     <div class="col-sm-6">
