--- a/src/app/seaexport/seaexportm/seaexportm-edit/seaexportm-edit.component.html
+++ b/src/app/seaexport/seaexportm/seaexportm-edit/seaexportm-edit.component.html
@@ -208,91 +208,87 @@
         </div>
       </div>
     </div>
-    <div class="page-body">
-      <div class="row">
-        <div class="col-md-12">
-          <table class="table table-sm table-hover table-bordered table-striped table-condensed">
+  </div>
+  <div class="page-body">
+    <div class="row">
+      <div class="col-md-12">
+        <table class="table table-sm table-hover table-bordered table-striped table-condensed">
 
-            <thead class="table-success">
-              <tr class="table-header">
-                <th *ngIf="showModel">ID</th>
-                <th>CNTR NO</th>
-                <th>TYPE</th>
-                <th>SEAL NO</th>
-                <th>PCS</th>
-                <th>UNIT</th>
-                <th>WEIGHT</th>
-                <th>CBM</th>
-                <th *ngIf="showModel">ORDER </th>
-                <th>ADD</th>
-                <th>DELETE</th>
-              </tr>
-            </thead>
+          <thead class="table-success">
+            <tr class="table-header">
+              <th *ngIf="showModel">ID</th>
+              <th>CNTR NO</th>
+              <th>TYPE</th>
+              <th>SEAL NO</th>
+              <th>PCS</th>
+              <th>UNIT</th>
+              <th>WEIGHT</th>
+              <th>CBM</th>
+              <th *ngIf="showModel">ORDER </th>
+              <th>ADD</th>
+              <th>DELETE</th>
+            </tr>
+          </thead>
 
-            <tbody formArrayName="master_cntr">
-              <tr *ngFor="let iRow of formArray('master_cntr').controls; let i=index;" [formGroupName]="i">
-                <td *ngIf="showModel">
-                  <label>{{iRow.get('cntr_id')?.value}}</label>
-                </td>
-                <td>
-                  <app-input formControlName="cntr_no" [rowIndex]="i" name="cntr_no"
-                    case="UPPER" maxlength="11"></app-input>
-                </td>
-                <td>
-                  <auto-complete formControlName="cntr_type_name" id="cntr_type_name-{{i}}" name="cntr_type_name"
-                    fieldName="cntr_type" [rowIndex]="i" (CallBack)="callBack($event)" 
-                     [table]="'param'" [subtable]="'container-type'"
-                    [company_id]="getCompanyId()" [url]="url"
-                    display_column="[{'caption':'ID','value':'param_id'},{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
-                </td>
-                <td>
-                  <app-input formControlName="cntr_sealno" [rowIndex]="i" name="cntr_sealno"
-                    case="UPPER"></app-input>
-                </td>
-                <td>
-                  <app-input formControlName="cntr_pieces" [rowIndex]="i" name="cntr_pieces"
-                    type="number" ></app-input>
-                </td>
-                <td>
-                  <auto-complete formControlName="cntr_packages_unit_name" id="cntr_packages_unit_name-{{i}}" name="cntr_packages_unit_name"
-                    fieldName="cntr_packages_unit_name" [rowIndex]="i" (CallBack)="callBack($event)" 
-                     [table]="'param'" [subtable]="'unit-master'"
-                    [company_id]="getCompanyId()" [url]="url"
-                    display_column="[{'caption':'ID','value':'param_id'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
-                </td>
-                <td>
-                  <app-input formControlName="cntr_weight" [rowIndex]="i" name="cntr_weight"
-                    [dec]="gs.globalConstants.global_dec_places" type="number"></app-input>
-                </td>
-                <td>
-                  <app-input formControlName="cntr_cbm" [rowIndex]="i" name="cntr_cbm"
-                    type="number" ></app-input>
-                </td>
-                <td *ngIf="showModel">
-                  <label>{{iRow.get('cntr_order')?.value}}</label>
-                </td>
-                <td align="centre" (click)="addCntr()" class="link">
-                  <i class="fa fa-plus"></i>
-                </td>
-                <td align="centre" (click)="deleteRow(i)" class="link">
-                  <i class="fa fa-trash"></i>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+          <tbody formArrayName="master_cntr">
+            <tr *ngFor="let iRow of formArray('master_cntr').controls; let i=index;" [formGroupName]="i">
+              <td *ngIf="showModel">
+                <label>{{iRow.get('cntr_id')?.value}}</label>
+              </td>
+              <td>
+                <app-input formControlName="cntr_no" [rowIndex]="i" name="cntr_no" case="UPPER"
+                  maxlength="11"></app-input>
+              </td>
+              <td>
+                <auto-complete formControlName="cntr_type_name" id="cntr_type_name-{{i}}" name="cntr_type_name"
+                  fieldName="cntr_type" [rowIndex]="i" (CallBack)="callBack($event)" [table]="'param'"
+                  [subtable]="'container-type'" [company_id]="getCompanyId()" [url]="url"
+                  display_column="[{'caption':'ID','value':'param_id'},{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
+              </td>
+              <td>
+                <app-input formControlName="cntr_sealno" [rowIndex]="i" name="cntr_sealno" case="UPPER"></app-input>
+              </td>
+              <td>
+                <app-input formControlName="cntr_pieces" [rowIndex]="i" name="cntr_pieces" type="number"></app-input>
+              </td>
+              <td>
+                <auto-complete formControlName="cntr_packages_unit_name" id="cntr_packages_unit_name-{{i}}"
+                  name="cntr_packages_unit_name" fieldName="cntr_packages_unit_name" [rowIndex]="i"
+                  (CallBack)="callBack($event)" [table]="'param'" [subtable]="'unit-master'"
+                  [company_id]="getCompanyId()" [url]="url"
+                  display_column="[{'caption':'ID','value':'param_id'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
+              </td>
+              <td>
+                <app-input formControlName="cntr_weight" [rowIndex]="i" name="cntr_weight"
+                  [dec]="gs.globalConstants.global_dec_places" type="number"></app-input>
+              </td>
+              <td>
+                <app-input formControlName="cntr_cbm" [rowIndex]="i" name="cntr_cbm" type="number"></app-input>
+              </td>
+              <td *ngIf="showModel">
+                <label>{{iRow.get('cntr_order')?.value}}</label>
+              </td>
+              <td align="centre" (click)="addCntr()" class="link">
+                <i class="fa fa-plus"></i>
+              </td>
+              <td align="centre" (click)="deleteRow(i)" class="link">
+                <i class="fa fa-trash"></i>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+    </div>
 
 
-      <div class="row" *ngIf="formArray('master_cntr').length <= 0">
-        <div class="col-md-12 text-center">
-          <button class="btn btn-sm btn-info" (click)="addCntr()">Add Container</button>
-        </div>
+    <div class="row" *ngIf="formArray('master_cntr').length <= 0">
+      <div class="col-md-12 text-center mb-2">
+        <button class="btn btn-sm btn-info" (click)="addCntr()">Add Container</button>
       </div>
     </div>
   </div>
-  <div class="page-body">
-    <div class="row"> 
+  <div class="page-body" *ngIf="mform.get('mbl_id')?.value != 0">
+    <div class="row">
       <div class="col-md-12">
         <table class="table table-sm table-hover table-bordered table-striped table-condensed">
 
@@ -308,63 +304,72 @@
               <th>FREIGHT</th>
               <!-- <th>TERMS</th> -->
               <th>CREATED-BY</th>
-              <th>DATE</th>
-              <th>ADD</th> 
+              <th>CREATED-DATE</th>
+              <!-- <th>ADD</th> -->
               <th>DELETE</th>
             </tr>
           </thead>
 
           <tbody formArrayName="master_house">
             <tr *ngFor="let iRow of formArray('master_house').controls; let i=index;" [formGroupName]="i">
-              <td align="centre" [routerLink]="['/seaexport/seaexporthEdit']" 
-              [queryParams]="{ id: iRow.get('hbl_id')?.value, mode: 'edit',menuid: menuid, type: type, appid: appid }" 
-              class="link"> <!--menuid: menuid, -->
+              <td align="centre" [routerLink]="['/seaexport/seaexporthEdit']"
+                [queryParams]="{ id: iRow.get('hbl_id')?.value, mbl_id: mform.get('mbl_id')?.value, mode: 'edit',menuid:'SEA-EXPORT-H', type: 'SEA-EXPORT-H', appid: appid }"
+                class="link"> <!--menuid: menuid, -->
                 <i class="fa fa-pencil"></i>
               </td>
               <td *ngIf="showModel">
                 <label>{{iRow.get('hbl_id')?.value}}</label>
               </td>
-              <td >
+              <td>
                 <label>{{iRow.get('hbl_houseno')?.value}}</label>
               </td>
-              <td >
+              <td>
                 <label>{{iRow.get('hbl_shipper_name')?.value}}</label>
               </td>
-              <td >
+              <td>
                 <label>{{iRow.get('hbl_consignee_name')?.value}}</label>
               </td>
-              <td >
+              <td>
                 <label>{{iRow.get('hbl_pcs')?.value}}</label>
               </td>
-              <td >
+              <td>
                 <label>{{iRow.get('hbl_handled_name')?.value}}</label>
               </td>
-              <td >
+              <td>
                 <label>{{iRow.get('hbl_frt_status_name')?.value}}</label>
               </td>
-              <td >
+              <td>
                 <label>{{iRow.get('rec_created_by')?.value}}</label>
               </td>
-              <td >
-                <label>{{iRow.get('hbl_issued_date')?.value}}</label>
+              <td>
+                <label>{{iRow.get('rec_created_date')?.value}}</label>
               </td>
-              <td align="centre" [routerLink]="['/seaexport/seaexporthEdit']" 
-              [queryParams]="{ hbl_mbl_id: mform.get('mbl_id')?.value, mode: 'add',menuid: menuid, type: type, appid: appid }" 
-              class="link">
+              <!-- <td align="centre" [routerLink]="['/seaexport/seaexporthEdit']"
+                [queryParams]="{ id:0, mbl_id: mform.get('mbl_id')?.value, mode: 'add',menuid:'SEA-EXPORT-H', type: 'SEA-EXPORT-H', appid: appid }"
+                class="link">
                 <i class="fa fa-plus"></i>
-              </td>
-              <td align="centre" (click)="deleteRow(i)" class="link">
+              </td> -->
+              <td align="centre" (click)="deleteHouse(i,iRow.get('hbl_houseno')?.value,iRow.get('hbl_id')?.value)" class="link">
                 <i class="fa fa-trash"></i>
               </td>
             </tr>
           </tbody>
         </table>
+        <div class="row" *ngIf=" mform.get('mbl_id')?.value != 0">
+          <div class="col-md-12 text-center mb-2">
+            <button *ngIf="bAdd" class="btn btn-sm btn-info" routerLink="/seaexport/seaexporthEdit"
+              [queryParams]="{ id:0, mbl_id: mform.get('mbl_id')?.value, mode: 'add',menuid:'SEA-EXPORT-H', type: 'SEA-EXPORT-H', appid: appid }">
+              Add House</button>
+          </div>
+        </div>
       </div>
     </div>
-
-    <!-- <div class="row" *ngIf="formArray('master_cntr').length <= 0">
-      <div class="col-md-12 text-center">
-        <button class="btn btn-sm btn-info" (click)="addCntr()">Add Container</button>
+    <!-- formArray('master_house').length <= 0 && -->
+    <!-- <div class="row" *ngIf="formArray('master_house').length <= 0 && mform.get('mbl_id')?.value != 0">
+      <div class="col-md-12 text-center mb-2">
+        <button *ngIf="bAdd" class="btn btn-sm btn-info" routerLink="/seaexport/seaexporthEdit"
+          [queryParams]="{ id:0, mbl_id: mform.get('mbl_id')?.value, mode: 'add',menuid:'SEA-EXPORT-H', type: 'SEA-EXPORT-H', appid: appid }">
+          Add House</button>
       </div>
     </div> -->
   </div>
