--- a/src/app/seaexport/seaexportm/seaexportm-edit/seaexportm-edit.component.html
+++ b/src/app/seaexport/seaexportm/seaexportm-edit/seaexportm-edit.component.html
@@ -1,6 +1,5 @@
 <div class="row">
   <div class="col-md-10">
-
     <div class="page-header">
       <h5>{{title}}</h5>
       <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/seaexport/seaexportmEdit"
@@ -270,7 +269,8 @@
                       [dec]="gs.globalConstants.global_dec_places" type="number"></app-input>
                   </td>
                   <td>
-                    <app-input formControlName="cntr_cbm" [rowIndex]="i" name="cntr_cbm" type="number"></app-input>
+                    <app-input formControlName="cntr_cbm" [rowIndex]="i" name="cntr_cbm"
+                    [dec]="gs.globalConstants.global_dec_places" type="number"></app-input>
                   </td>
                   <td *ngIf="showModel">
                     <label>{{iRow.get('cntr_order')?.value}}</label>
@@ -381,8 +381,9 @@
         [disabled]="mform.invalid">Save</button>
     </div>
   </div>
-  <div class="col-md-2 " *ngIf="mform.get('mbl_id')?.value != 0">
-    <div class="page-body line-bottom">
+
+  <div class="col-md-2 border-top" *ngIf="mform.get('mbl_id')?.value != 0">
+    <div class="page-body line-bottom ">
       <div class="row">
         <div class="col-sm-12">
           <div class="form-group row">
