--- a/src/app/airexport/airexporth/airexporth-edit/airexporth-edit.component.html
+++ b/src/app/airexport/airexporth/airexporth-edit/airexporth-edit.component.html
@@ -248,7 +248,7 @@
           <label class="col-sm-4 form-label form-lable-sm" for="">Client.Type</label>
           <div class="col-sm-8">
             <app-combobox [dataSource]="dataList1" [valueColumn]="'key'" [displayColumn]="'value'"
-              formControlName="hbl_bltype"></app-combobox>
+              formControlName="hbl_bltype" name="hbl_bltype"></app-combobox>
           </div>
         </div>
         <div class="form-group row">
